# pgraph

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
docs/: api.md
graph/: __init__.py  abstract_graph.py  adjacency_list_graph.py  adjacency_matrix_graph.py
graph/utils/: __init__.py  dfs.py  logger.py
notebooks/: adjacency_list_graph_example.ipynb  adjacency_matrix_gaph_example.ipynb  transfer_network.ipynb
notebooks/outputs/: grafo.csv
